[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airs"
version = "0.1.0"
description = "AI Runtime Security - Implementation toolkit for the AIRS framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jonathan Gill" },
]
keywords = ["ai", "security", "runtime", "guardrails", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "typer>=0.9",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100", "uvicorn>=0.20"]
langchain = ["langchain-core>=0.1"]
judge = ["openai>=1.0"]
all = ["airs[fastapi,langchain,judge]"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1"]

[project.scripts]
airs = "airs.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/airs"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
